135032-Filter dropdowns, when clicked on it, Placeholder text is shifting fixed, update common-form-elements npm package version

--- a/src/app/client/src/assets/styles/styles.scss
+++ b/src/app/client/src/assets/styles/styles.scss
@@ -59,3 +59,16 @@ body .uwy.userway_p1 .userway_buttons_wrapper {
     top: 66px !important;
     left: calc(100vw - 48px) !important;
 }
+
+app-search-filter .sb-mat__dropdown.mat-form-field-appearance-fill.mat-form-field-should-float .mat-form-field-flex,sb-search-facet-filter .sb-mat__dropdown.mat-form-field-appearance-fill.mat-form-field-should-float .mat-form-field-flex{
+    align-items: center !important;
+}
+app-search-filter .sb-mat__dropdown.mat-form-field-appearance-fill .mat-select-arrow-wrapper,sb-search-facet-filter .sb-mat__dropdown.mat-form-field-appearance-fill .mat-select-arrow-wrapper {
+    transform: none !important;
+}
+app-search-filter .sb-mat__dropdown.mat-form-field-appearance-fill .mat-select-arrow,sb-search-facet-filter .sb-mat__dropdown.mat-form-field-appearance-fill .mat-select-arrow{
+    transform: none !important;
+}
+app-search-filter .sb-mat__dropdown.mat-form-field-appearance-fill.mat-form-field-should-float .mat-select, sb-search-facet-filter .sb-mat__dropdown.mat-form-field-appearance-fill.mat-form-field-should-float .mat-select{
+    margin-top: 0px !important;
+}
